WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
283744
ARMv7: fix single-precision fp arguments in testb3
https://bugs.webkit.org/show_bug.cgi?id=283744
Summary
ARMv7: fix single-precision fp arguments in testb3
Angelos Oikonomopoulos
Reported
2024-11-27 00:51:19 PST
We already have a workaround in place in testb3, but it's not used.
Attachments
Add attachment
proposed patch, testcase, etc.
Angelos Oikonomopoulos
Comment 1
2024-11-27 00:57:57 PST
Pull request:
https://github.com/WebKit/WebKit/pull/37181
EWS
Comment 2
2024-11-27 14:10:19 PST
Committed
287132@main
(5ff6d249b0dc): <
https://commits.webkit.org/287132@main
> Reviewed commits have been landed. Closing PR #37181 and removing active labels.
Radar WebKit Bug Importer
Comment 3
2024-11-27 14:12:54 PST
<
rdar://problem/140634716
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug