ARMv7: fix single-precision fp arguments in testb3 https://bugs.webkit.org/show_bug.cgi?id=283744

Reviewed by Justin Michaud.

Ensure that (contrary to the C ABI) single-precision FP arguments will
be passed in even numbered single-precision FP registers on ARMv7. This
uses the ArgumentTweaker machinery which already documents this
workaround.

The patch fixes testFloatMaxMin but also removes a couple more
now-passing tests from testb3_failingArmV7Tests.inc.

* Source/JavaScriptCore/b3/testb3.h:
(invoke):
* Source/JavaScriptCore/b3/testb3_7.cpp:
(testFMaxMin):
* Source/JavaScriptCore/b3/testb3_failingArmV7Tests.inc:

Canonical link: https://commits.webkit.org/287132@main